mealie_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  selector:
    app: mealie
  ports:
    - name: http
      port: 9000        # service port
      targetPort: 9000  # container port
      protocol: TCP
