mealie_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: mealie.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie
                port:
                  number: 9000
